0.06
		- Use Any::Moose to allow either Moose or Mouse.
		- Switch to dzil.

0.05
		- dep on Moose instead of Mouse

0.04
		- zap Squirrel

0.03
		- Fucking manifest... we hates it

0.02
		- Missing deps

0.01
		- Added factory and sugary version

0.01_01
		- Preview release, missing functionality