@@ -10,6 +10,20 @@ use IO::Handle;
 use 5.008;
 
 has command => ( is => "rw", required => 1 );
+has search_path => ( is => 'rw', isa => 'Str', lazy_build => 1 );
+
+# This is a scalar so that people can customize it (which they would
+# particularly need to do on Windows).
+our $TAINT_PATH =
+    '/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/sbin';
+
+sub _build_search_path {
+    # In taint mode it's not safe to use $ENV{PATH}.
+    if (${^TAINT}) {
+        return $TAINT_PATH;
+    }
+    return $ENV{PATH};
+}
 
 sub open_handle {
     my $self = shift;
@@ -17,6 +31,7 @@ sub open_handle {
     my $cmd = $self->command;
     my @cmd = ref $cmd ? @$cmd : $cmd;
 
+    local $ENV{PATH} = $self->search_path;
     open my $fh, "-|", @cmd
         or die "open(@cmd|): $!";
 
